--- a/client/app/views/map-listings.client.view.html
+++ b/client/app/views/map-listings.client.view.html
@@ -8,3 +8,15 @@
     https://angular-ui.github.io/angular-google-maps/#!/api/markers
     https://angular-ui.github.io/angular-google-maps/#!/api/windows
   -->
+  <div class="row" ng-controller="ListingsController" ng-init="find()">
+    <ui-gmap-google-map center="map.center" zoom="map.zoom">
+        <ui-gmap-markers models="listings" idkey="'_id'" coords="'coordinates'" click="onClick">
+            <ui-gmap-windows show="show">
+                <div ng-non-bindable>
+                    <h6>{{name}} ({{code}})</h6>
+                    <h6>{{address}}</h6>
+                </div>
+            </ui-gmap-windows>
+        </ui-gmap-markers>
+    </ui-gmap-google-map>
+</div>
